--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       crossorigin="anonymous">
     <link rel="stylesheet"
       href="/node_modules/tachyons/css/tachyons.min.css">
-    <title>Unmoderated</title>
+    <title>#Unmoderated</title>
   </head>
-  <body class="sans-serif pa4 f3">
+  <body class="san-serif pa4 f4">
     <div class="container" id="app"></div>
 
     <script src="./dist/bundle.js" charset="utf-8"></script>
